# JHTT_API

./: .dockerignore  .gitignore  .gitmodules  DEPLOYMENT.md  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  meetings.md  pyproject.toml  requirements-prod.txt  setup.py
.github/workflows/: python-app.yml
API_Client_Auxiliary_service/: .pylintrc  README.md
API_Client_Auxiliary_service/auxiliary_service/: README.md  requirements.txt  service.py
Beatify/: README.md  __init__.py  api.py  models.py  utils.py  wsgi.py
Beatify/resources/: __init__.py  albums.py  artists.py  playlists.py  tracks.py  users.py
Beatify/static/schema/: README.md
Database_folder/: README.md  populate_DB.py  requirements.txt  test.db
docker/: entrypoint.sh  nginx.conf  supervisord.conf
docs/: openapi.yaml
tests/: README.md  api_test.py  db_test.py  utils.py
