[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beatify-api"
version = "0.1.0"
description = "Beatify REST API package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask==3.1.2",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-RESTful>=0.3.10",
    "SQLAlchemy==2.0.46",
    "pysqlite3==0.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["Beatify*"]
